tests/e2e/chainsaw/08-versioning-registry/resources/gateway-without-version.yaml
apiVersion: formance.com/v1beta1
kind: Gateway
metadata:
  name: chainsaw-version-missing-gateway
spec:
  stack: chainsaw-version-missing
  dev: true
