tests/e2e/chainsaw/08-versioning-registry/resources/gateway.yaml
apiVersion: formance.com/v1beta1
kind: Gateway
metadata:
  name: chainsaw-versioning-gateway
spec:
  stack: chainsaw-versioning
  dev: true
